--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,7 @@ dependencies:
   uuid: ^4.1.0
   image_picker: ^1.0.4
   auto_size_text: ^3.0.0
+  pdf: ^3.10.4
 
 dev_dependencies:
   flutter_test:
